chore(vertexai): Update to the latest version of the libraries-bom